render( ) 함수 동작 구현

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<div id="myapp"></div>
-<script src="app.js"></script>
+<!-- 지금까지 만든 가상돔을, 브라우저가 볼 수 있게 화면에 렌더링 -->
+<div id="myapp"></div> <!-- ReactComponent 가 들어가는 자리 -->
+<script src="app.js"></script> <!-- 작성한 코드를 불러옴-->
